<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Toma Inventario</string>
    <string name="action_settings">Settings</string>
    <string name="button_capturar">Capturar</string>
    <string name="button_consultar">Consultar</string>
    <string name="button_consultarTotales">Consultar Totales</string>
    <string name="button_procdif">Procesar Diferencias</string>
    <string name="button_cerrar">Cerrar</string>
    <string name="button_limpiar">BORR</string>
    <string name="button_grabar">Grabar</string>
    <string name="button_foto">Foto</string>
    <string name="button_borrar">Borrar Reg</string>
    <string name="button_aceptar">Aceptar</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="subir_fotos">Subir Fotos</string>
    <string name="edit_id">Capture ID</string>
    <string name="edit_factura">Capture Factura</string>
    <string name="edit_marca">Capture Marca</string>
    <string name="edit_modelo">Capture Modelo</string>
    <string name="edit_color">Capture Color</string>
    <string name="edit_origen">Capture Origen</string>
    <string name="edit_serie">Capture Serie</string>
    <string name="edit_foto">Capture Foto</string>
    <string name="text_factura">Factura</string>
    <string name="text_marca">Marca</string>
    <string name="text_modelo">Modelo</string>
    <string name="text_color">Color</string>
    <string name="text_origen">Origen</string>
    <string name="text_serie">Serie</string>
    <string name="text_foto">Foto</string>
    <string name="text_loading">Subiendo Fotos...</string>
    <string name="CheckBox_foto">Subir Foto Auto</string>
    <string name="title_activity_capturar">Capturar Inventario</string>
    <string name="title_activity_consulta">Seleccione Codigo</string>
    <string name="title_activity_consulta_totales">Totales Capturados</string>
    <string name="title_activity_subir_fotos">Subir Fotos</string>
    <string name="hello_world">Hello world!</string>
    <string name="SpinnerSucursales">Seleccione Sucursal</string>
    <string name="button_desconectar">Desconectar BD</string>
    <string name="button_conectar">Conectar BD</string>
    <string name="edit_codigo">Capture Codigo</string>
    <string name="text_codigo">Codigo</string>
    <string name="text_gondola">Gondola</string>
    <string name="edit_gondola">Capture Gondola</string>
    <string name="edit_gondola0">Capture Gondola (0 = Todas)</string>
    <string name="text_cantidad">Cantidad</string>
    <string name="edit_cantidad">Capture Cantidad</string>
    <string name="text_descripcion"></string>
    <string name="text_grupo"></string>
    <string name="text_precio"></string>
    <string name="button_scan">SCAN</string>
    <string name="button_siguiente">SIG</string>
    <string name="button_buscar">BUSC</string>
    <string name="search_hint">Buscar Codigo</string>
    <string name="settings_description">Busqueda de Codigos</string>
    <string name="text_codigoproveedor">Codigo Prov:</string>
    <string name="text_codigobarras">Codigo Barras:</string>
    <string name="text_descripcioncodigo">Descripcion:</string>
    <string name="text_preciocodigo">Precio:</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Este email es incorrecto</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_proc_dif">ProcDifActivity</string>
    <string name="textViewDate1">Fecha Inicio: </string>
    <string name="edit_Date1">Capture Fecha</string>
    <string name="button1">Seleccione Fecha</string>
    <string name="buttonProcDif">Procesar Diferencias</string>
    <string name="textViewVersionName">Ver: 1.0</string>

</resources>
