<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:focusable="false"
		android:focusableInTouchMode="false"
		android:orientation="vertical"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingBottom="@dimen/activity_vertical_margin"
		tools:context="mx.sounds.inventoryaudit.CapturarActivity">

		<TextView
			android:id="@+id/textView2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/text_gondola" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingBottom="@dimen/activity_vertical_margin">

			<EditText
				android:id="@+id/txtgondola"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:hint="@string/edit_gondola"
				android:inputType="textCapCharacters">

				<requestFocus />
			</EditText>

			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:onClick="sndLimpiarGondola"
				android:text="@string/button_limpiar" />

		</LinearLayout>

		<TextView
			android:id="@+id/infocodigo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/text_codigo" />


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal">

			<EditText
				android:id="@+id/txtcodigo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dp"
				android:layout_weight="1"
				android:focusable="true"
				android:focusableInTouchMode="true"
				android:hint="@string/edit_codigo"
				android:inputType="textCapCharacters">

				<requestFocus />
			</EditText>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:orientation="horizontal"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingBottom="@dimen/activity_vertical_margin">

			<Button
				android:id="@+id/btnSig"
				android:layout_width="80dp"
				android:layout_height="wrap_content"
				android:focusable="false"
				android:onClick="sndCodigoSiguiente"
				android:text="@string/button_siguiente" />

			<Button
				android:layout_width="80dp"
				android:layout_height="wrap_content"
				android:focusable="false"
				android:onClick="sndScan"
				android:text="@string/button_scan" />

			<Button
				android:layout_width="80dp"
				android:layout_height="wrap_content"
				android:focusable="false"
				android:onClick="sndCodigoBuscar"
				android:text="@string/button_buscar" />

			<Button
				android:layout_width="80dp"
				android:layout_height="wrap_content"
				android:focusable="false"
				android:onClick="sndLimpiarCodigo"
				android:text="@string/button_limpiar" />

		</LinearLayout>

		<TextView
			android:id="@+id/lblgrupo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/text_precio" />

		<TextView
			android:id="@+id/lblcodigo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/text_descripcion" />

		<TextView
			android:id="@+id/lbldescripcion"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/text_grupo" />

		<TextView
			android:id="@+id/lblprecio"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/text_precio" />


		<TextView
			android:id="@+id/informativocantidad"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:focusable="false"
			android:focusableInTouchMode="false"
			android:text="@string/text_cantidad" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingBottom="@dimen/activity_vertical_margin">

			<EditText
				android:id="@+id/txtcantidad"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:filterTouchesWhenObscured="false"
				android:fitsSystemWindows="false"
				android:focusable="true"
				android:focusableInTouchMode="false"
				android:hint="@string/edit_cantidad"
				android:inputType="number|numberSigned">

				<requestFocus />

			</EditText>

			<Button
				android:id="@+id/btngrabar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:focusable="false"
				android:focusableInTouchMode="false"
				android:onClick="sndGrabar"
				android:text="@string/button_grabar" />

			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:focusable="false"
				android:onClick="sndLimpiarCantidad"
				android:text="@string/button_limpiar" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:orientation="horizontal"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingBottom="@dimen/activity_vertical_margin">

			<Button
				android:layout_width="140dp"
				android:layout_height="wrap_content"
				android:layout_gravity="bottom"
				android:focusable="false"
				android:onClick="sndCerrar"
				android:text="@string/button_cerrar" />

		</LinearLayout>

	</LinearLayout>
</ScrollView>
