<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.sounds.inventoryaudit.MainActivity"
	android:weightSum="1">
<Button
	 android:layout_width="200dp"
	 android:layout_height="wrap_content"
	 android:onClick="sndCapturar" 
	 android:text="@string/button_capturar" />

<Button
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:onClick="sndConsultar" 
    android:text="@string/button_consultar" />

<Button
	android:layout_width="200dp"
	android:layout_height="wrap_content"
	android:onClick="sndProcDif"
	android:text="@string/button_procdif" />

<Button
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:onClick="sndCerrar" 
    android:text="@string/button_cerrar" />

<Spinner
	android:id="@+id/SpinnerSucursales"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:prompt="@string/SpinnerSucursales"
	android:focusable="true"
	android:visibility="visible"
	android:contextClickable="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:baselineAligned="false">
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:onClick="sndConectar"
            android:text="@string/button_conectar"
            android:layout_weight="1" />
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:onClick="sndDesconectar"
            android:text="@string/button_desconectar"
            android:layout_weight="1" />
    </LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="right"
		android:orientation="horizontal" >

		<TextView
			android:id="@+id/textViewVersionName"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:text="wVersionName" />
	</LinearLayout>
</LinearLayout>
