<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.sounds.inventoryaudit.BuscarCodigoActivity">
    <LinearLayout
        android:layout_weight=".12"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:gravity="top"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight=".5"
            android:gravity="left"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/textView_1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/text_codigo"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView_2"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/text_codigoproveedor"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <TextView
                android:id="@+id/textView_3"
                android:gravity="left"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/text_codigobarras"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight=".5"
            android:gravity="left"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/textView_5"
                android:gravity="left"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".66"
                android:text="@string/text_descripcioncodigo"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <TextView
                android:id="@+id/textView_6"
                android:gravity="left"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/text_preciocodigo"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/ListView_Busqueda"
        android:layout_weight=".75"
        android:layout_width="match_parent"
        android:layout_height="0dip" >
    </ListView>

    <LinearLayout
        android:layout_weight=".13"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:gravity="right"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/buttonClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:onClick="buttonClose_onclick"
            android:text="@string/button_cerrar" />
    </LinearLayout>

</LinearLayout>
