<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="76dp"
    tools:context="mx.sounds.inventoryaudit.ProcDifActivity"
    tools:showIn="@layout/activity_proc_dif">
    <ProgressBar
        android:id="@+id/procdif_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtmensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/procdif_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/procdifemail_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewDate1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewDate1" />
            <EditText
                android:id="@+id/edit_Date1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:inputType="none"
                android:editable="false"
                android:hint="@string/edit_Date1" >
                <requestFocus />
            </EditText>
            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button1" />
            <Button
                android:id="@+id/buttonProcDif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buttonProcDif_onclick"
                android:text="@string/buttonProcDif" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
